package com.niyaj.popos.features.customer.domain.util

object CustomerTestTags {
    const val CUSTOMER_PHONE_FIELD = "Customer Phone"
    const val CUSTOMER_PHONE_ERROR = "Customer PhoneERROR"

    const val CUSTOMER_NAME_FIELD = "Customer Name"
    const val CUSTOMER_NAME_ERROR = "Customer NameERROR"

    const val CUSTOMER_EMAIL_FIELD = "Customer Email"
    const val CUSTOMER_EMAIL_ERROR = "Customer EmailERROR"
    const val ADD_EDIT_CUSTOMER_BUTTON = "AddEdit Customer"
}