...
            }else{
                navController.navigateUp()
            }
        },
        title = {
            if (selectedCustomers.isEmpty()) {
                Text(text = "Customers")
            } else if(selectedCustomers.size > 1){
                Text(text = "${selectedCustomers.size} Selected")
            }
        },
        isFloatingActionButtonDocked = customers.isNotEmpty(),
        floatingActionButton = {
...
                        onClick = {
                            navController.navigate(AddEditCustomerScreenDestination(customerId = selectedCustomers.first()))
                        },
                    ){
                        Icon(
                            imageVector = Icons.Default.Edit,
                            contentDescription = "Edit Customer",
                            tint = MaterialTheme.colors.onPrimary,
                        )
                    }
                }

                IconButton(
...
                        deleteCustomerState.show()
                    },
                    enabled = selectedCustomers.isNotEmpty()
                ){
                    Icon(
                        imageVector = Icons.Default.Delete,
                        contentDescription = "Delete Customer",
                        tint = MaterialTheme.colors.onPrimary,
                    )
                }

                IconButton(
                    onClick = {
                        customerViewModel.onCustomerEvent(CustomerEvent.SelectAllCustomer)
                    },
                    enabled = selectedCustomers.isNotEmpty()
                ){
                    Icon(
                        imageVector = Icons.Default.Rule,
                        contentDescription = "Select All Customers",
                        tint = MaterialTheme.colors.onPrimary,
                    )
                }
            }
            else if(showSearchBar){
                StandardSearchBar(
...
